AMC Gain: $ 35.23 Win %: 61.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3
AMC Gain: $ -10.87 Win %: 62.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP_DB8
AMC Gain: $ 22.31 Win %: 57.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR_DB8
AMC Gain: $ -9.49 Win %: 47.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV_DB8
AMC Gain: $ 4.46 Win %: 52.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL_DB8
AMC Gain: $ -19.59 Win %: 62.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP_DB8
AMC Gain: $ 33.42 Win %: 64.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR_DB8
AMC Gain: $ -5.05 Win %: 52.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV_DB8
AMC Gain: $ 1.92 Win %: 69.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP_DB8
AMC Gain: $ -7.9 Win %: 49.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL_DB8
AMC Gain: $ -6.8 Win %: 66.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP_DB8
AMC Gain: $ 27.89 Win %: 52.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_IR2
AMC Gain: $ 13.44 Win %: 71.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_TS
AMC Gain: $ -31.9 Win %: 69.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP
AMC Gain: $ -52.87 Win %: 59.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QP_IR2
AMC Gain: $ 22.28 Win %: 54.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR
AMC Gain: $ -2.96 Win %: 49.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV
AMC Gain: $ 14.84 Win %: 52.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL
AMC Gain: $ -39.6 Win %: 67.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP
AMC Gain: $ 31.4 Win %: 62.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR
AMC Gain: $ 3.1 Win %: 52.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV
AMC Gain: $ 13.33 Win %: 57.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AL
AMC Gain: $ -43.3 Win %: 69.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP
AMC Gain: $ 9.66 Win %: 55.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL
AMC Gain: $ 39.13 Win %: 71.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP
AMC Gain: $ 24.82 Win %: 81.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_TS
AMC Gain: $ -21.29 Win %: 59.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AO_AC
AMC Gain: $ -13.18 Win %: 47.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QP_PM
AMC Gain: $ 15.23 Win %: 74.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AV_TS
AMC Gain: $ 14.46 Win %: 77.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AL_TS
AMC Gain: $ 8.49 Win %: 54.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV
AMC Gain: $ 30.87 Win %: 57.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IR2
AMC Gain: $ 24.67 Win %: 52.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR
AMC Gain: $ -6.38 Win %: 47.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AV
AMC Gain: $ 10.11 Win %: 52.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AL
AMC Gain: $ 0.29 Win %: 47.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_VI
AMC Gain: $ 13.32 Win %: 50.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_LI
AMC Gain: $ -39.74 Win %: 69.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QP
AMC Gain: $ 43.46 Win %: 67.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM
AMC Gain: $ 27.82 Win %: 55.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_SS
AMC Gain: $ -5.89 Win %: 44.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QL
AMC Gain: $ 16.09 Win %: 57.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_DB8
AMC Gain: $ 27.21 Win %: 57.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AO
AMC Gain: $ 43.77 Win %: 72.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AC
AMC Gain: $ 31.45 Win %: 74.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT
AMC Gain: $ 23.83 Win %: 52.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_PM
AMC Gain: $ 25.34 Win %: 77.00 in 59 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TS
AMC Gain: $ -8.52 Win %: 55.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
AMC Gain: $ 38.33 Win %: 62.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
AMC Gain: $ 66.44 Win %: 57.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
AMC Gain: $ 59.25 Win %: 64.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
AMC Gain: $ 1.6 Win %: 69.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
AMC Gain: $ 21.71 Win %: 59.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
AMC Gain: $ 20.8 Win %: 50.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
AMC Gain: $ -23.0 Win %: 59.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
AMC Gain: $ 14.26 Win %: 62.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
AMC Gain: $ -7.42 Win %: 59.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
AMC Gain: $ -47.7 Win %: 38.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_IR1
AMC Gain: $ 20.17 Win %: 77.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_TS
AMC Gain: $ -1.85 Win %: 61.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP
AMC Gain: $ 4.56 Win %: 62.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP_IR1
AMC Gain: $ 48.15 Win %: 69.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR
AMC Gain: $ 71.65 Win %: 59.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV
AMC Gain: $ 68.98 Win %: 67.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL
AMC Gain: $ 2.64 Win %: 69.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP
AMC Gain: $ 22.61 Win %: 61.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR
AMC Gain: $ 24.19 Win %: 52.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV
AMC Gain: $ 36.41 Win %: 57.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AL
AMC Gain: $ -27.07 Win %: 57.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP
AMC Gain: $ 15.97 Win %: 62.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL
AMC Gain: $ -3.6 Win %: 62.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP
AMC Gain: $ 18.66 Win %: 77.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_TS
AMC Gain: $ -4.97 Win %: 57.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AO_AC
AMC Gain: $ 2.51 Win %: 81.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP_PM
AMC Gain: $ 17.3 Win %: 74.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AV_TS
AMC Gain: $ 22.17 Win %: 77.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AL_TS
AMC Gain: $ 48.48 Win %: 72.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV
AMC Gain: $ -33.9 Win %: 40.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IR1
AMC Gain: $ 43.59 Win %: 57.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR
AMC Gain: $ 57.46 Win %: 52.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AV
AMC Gain: $ 65.85 Win %: 59.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AL
AMC Gain: $ 5.33 Win %: 47.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_VI
AMC Gain: $ 16.15 Win %: 57.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_LI
AMC Gain: $ -3.6 Win %: 62.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP
AMC Gain: $ 15.84 Win %: 57.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM
AMC Gain: $ 38.34 Win %: 54.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_SS
AMC Gain: $ 38.24 Win %: 55.00 in 59 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QL
