Gain: $ 38.35 Win %: 62.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5
Gain: $ 452.16 Win %: 59.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV
Gain: $ 0 Win %: 100.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IR3
Gain: $ 36.23 Win %: 62.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR
Gain: $ 202.18 Win %: 63.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AV
Gain: $ 138.71 Win %: 81.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_VI
Gain: $ 33.25 Win %: 60.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AL
Gain: $ 60.8 Win %: 70.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_LI
Gain: $ -40.42 Win %: 67.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP
Gain: $ 373.98 Win %: 66.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_PA
Gain: $ 371.31 Win %: 78.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_SS
Gain: $ 125.54 Win %: 60.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QL
Gain: $ 38.35 Win %: 62.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_DB10
Gain: $ 0 Win %: 100.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_IR3
Gain: $ 0 Win %: 100.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP_IR3
Gain: $ 430.01 Win %: 55.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR
Gain: $ 444.03 Win %: 58.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV
Gain: $ 178.46 Win %: 68.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP
Gain: $ 280.26 Win %: 63.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_PA_TR
Gain: $ 370.51 Win %: 67.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_PA_AV
Gain: $ 250 Win %: 74.00 in 74 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_PA_QP
Gain: $ -3.31 Win %: 47.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_RV
Gain: $ 0 Win %: 100.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_IR3
Gain: $ -28.44 Win %: 55.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_TR
Gain: $ 316.96 Win %: 59.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_AV
Gain: $ 171.16 Win %: 77.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_VI
Gain: $ -208.92 Win %: 51.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_AL
Gain: $ -259.4 Win %: 54.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_LI
Gain: $ -187.08 Win %: 54.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_QP
Gain: $ 183.07 Win %: 59.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_PA
Gain: $ 250.53 Win %: 93.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_SS
Gain: $ -143.26 Win %: 43.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_QL
Gain: $ -139.01 Win %: 52.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_DB10
Gain: $ 0 Win %: 100.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_TR_IR3
Gain: $ 0 Win %: 100.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_QP_IR3
Gain: $ 94.31 Win %: 47.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_RV_TR
Gain: $ 266.23 Win %: 51.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_RV_AV
Gain: $ -158.08 Win %: 50.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_RV_QP
Gain: $ 273.94 Win %: 62.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_PA_TR
Gain: $ 384.38 Win %: 70.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_PA_AV
Gain: $ -18.67 Win %: 62.00 in 74 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_PA_QP
Gain: $ 27.93 Win %: 50.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV
Gain: $ 0 Win %: 100.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_IR3
Gain: $ 116.04 Win %: 50.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_TR
Gain: $ 321.44 Win %: 56.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_AV
Gain: $ 122.57 Win %: 66.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_VI
Gain: $ -95.96 Win %: 47.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_AL
Gain: $ -56.63 Win %: 48.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_LI
Gain: $ -406.7 Win %: 50.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_QP
Gain: $ 238.57 Win %: 63.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_PA
Gain: $ 160.94 Win %: 100.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_SS
Gain: $ -18.7 Win %: 39.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_QL
Gain: $ 12.29 Win %: 47.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_DB10
Gain: $ 0 Win %: 100.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_TR_IR3
Gain: $ 0 Win %: 100.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_QP_IR3
Gain: $ 208.72 Win %: 50.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_TR
Gain: $ 129.22 Win %: 55.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_AV
Gain: $ -332.14 Win %: 52.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_QP
Gain: $ 325.48 Win %: 59.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_PA_TR
Gain: $ 235.16 Win %: 64.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_PA_AV
Gain: $ -120 Win %: 59.00 in 74 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_PA_QP
Gain: $ -3.31 Win %: 47.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_RV
Gain: $ 0 Win %: 100.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_IR3
Gain: $ -28.44 Win %: 55.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_TR
Gain: $ 316.96 Win %: 59.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_AV
Gain: $ 171.16 Win %: 77.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_VI
Gain: $ -208.92 Win %: 51.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_AL
Gain: $ -259.4 Win %: 54.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_LI
Gain: $ -187.08 Win %: 54.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_QP
Gain: $ 183.07 Win %: 59.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_PA
Gain: $ 250.53 Win %: 93.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_SS
Gain: $ -143.26 Win %: 43.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_QL
Gain: $ -139.01 Win %: 52.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_DB10
Gain: $ 0 Win %: 100.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_TR_IR3
Gain: $ 0 Win %: 100.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_QP_IR3
Gain: $ 94.31 Win %: 47.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_RV_TR
Gain: $ 266.23 Win %: 51.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_RV_AV
Gain: $ -158.08 Win %: 50.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_RV_QP
Gain: $ 273.94 Win %: 62.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_PA_TR
Gain: $ 384.38 Win %: 70.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_PA_AV
Gain: $ -18.67 Win %: 62.00 in 74 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_PA_QP
Gain: $ 30.63 Win %: 61.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5
Gain: $ -1042.29 Win %: 33.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV
Gain: $ 209.81 Win %: 68.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IR5
Gain: $ 28.51 Win %: 61.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR
Gain: $ 194.46 Win %: 62.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AV
Gain: $ 138.71 Win %: 81.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_VI
Gain: $ 25.53 Win %: 60.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AL
Gain: $ 60.8 Win %: 70.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_LI
Gain: $ -31.5 Win %: 68.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP
Gain: $ -228.44 Win %: 52.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM
Gain: $ 30.17 Win %: 61.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_SS
Gain: $ 117.82 Win %: 60.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QL
Gain: $ 30.63 Win %: 61.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_DB6
Gain: $ 58.05 Win %: 62.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_IR5
Gain: $ -83.92 Win %: 66.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP
Gain: $ -11.91 Win %: 69.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP_IR5
Gain: $ -412.04 Win %: 38.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR
Gain: $ -959.41 Win %: 29.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV
Gain: $ -1015.87 Win %: 30.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL
Gain: $ -908.5 Win %: 34.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP
Gain: $ -165.22 Win %: 54.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR
Gain: $ 31.58 Win %: 56.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV
Gain: $ -18.07 Win %: 60.00 in 75 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP
Gain: $ -1070.75 Win %: 36.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_RV
Gain: $ -291.61 Win %: 41.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_IR5
Gain: $ -37.47 Win %: 54.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_TR
Gain: $ 307.93 Win %: 58.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_AV
Gain: $ 171.16 Win %: 77.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_VI
Gain: $ -217.95 Win %: 50.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_AL
Gain: $ -262.65 Win %: 53.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_LI
Gain: $ -196.11 Win %: 53.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_QP
Gain: $ 0.2 Win %: 56.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_HM
Gain: $ 159.03 Win %: 53.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_SS
Gain: $ -152.29 Win %: 42.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_QL
Gain: $ -148.04 Win %: 52.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_DB8
Gain: $ -142.99 Win %: 52.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_TR_IR5
Gain: $ -196.5 Win %: 54.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_TR_QP
Gain: $ -365.53 Win %: 50.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_QP_IR5
Gain: $ -435.89 Win %: 41.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_RV_TR
Gain: $ -1045.79 Win %: 36.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_RV_AV
Gain: $ -1288.5 Win %: 33.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_RV_AL
Gain: $ -1206.01 Win %: 38.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_RV_QP
Gain: $ 76.9 Win %: 54.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_HM_TR
Gain: $ 279.54 Win %: 57.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_HM_AV
Gain: $ -220.08 Win %: 53.00 in 75 days with algo TB4_HS_QM_OB4_OS4_CB5_CS5_HM_QP
Gain: $ -1438.8 Win %: 25.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV
Gain: $ -369.22 Win %: 40.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_IR5
Gain: $ 108.32 Win %: 49.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_TR
Gain: $ 313.72 Win %: 56.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_AV
Gain: $ 122.57 Win %: 66.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_VI
Gain: $ -103.68 Win %: 46.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_AL
Gain: $ -60.66 Win %: 48.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_LI
Gain: $ -409.31 Win %: 49.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_QP
Gain: $ -0.7 Win %: 53.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_HM
Gain: $ 84.69 Win %: 49.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_SS
Gain: $ -26.42 Win %: 38.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_QL
Gain: $ 4.57 Win %: 46.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_DB6
Gain: $ -150.62 Win %: 44.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_TR_IR5
Gain: $ -366.72 Win %: 46.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_TR_QP
Gain: $ -652.39 Win %: 40.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_QP_IR5
Gain: $ -493.7 Win %: 42.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_TR
Gain: $ -1188.89 Win %: 29.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_AV
Gain: $ -1370.07 Win %: 30.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_AL
Gain: $ -1450.84 Win %: 29.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_QP
Gain: $ 255.73 Win %: 53.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_HM_TR
Gain: $ -45.27 Win %: 50.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_HM_AV
Gain: $ -367.37 Win %: 49.00 in 75 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_HM_QP
Gain: $ -1070.75 Win %: 36.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_RV
Gain: $ -291.61 Win %: 41.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_IR5
Gain: $ -37.47 Win %: 54.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_TR
Gain: $ 307.93 Win %: 58.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_AV
Gain: $ 171.16 Win %: 77.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_VI
Gain: $ -210.38 Win %: 50.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_AL
Gain: $ -251.14 Win %: 53.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_LI
Gain: $ -196.11 Win %: 53.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_QP
Gain: $ 0.2 Win %: 56.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_HM
Gain: $ 159.03 Win %: 53.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_SS
Gain: $ -152.29 Win %: 42.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_QL
Gain: $ -148.04 Win %: 52.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_DB8
Gain: $ -190.07 Win %: 52.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_TR_IR5
Gain: $ -231.17 Win %: 53.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_TR_QP
Gain: $ -477.48 Win %: 50.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_QP_IR5
Gain: $ -420.04 Win %: 42.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_RV_TR
Gain: $ -1045.79 Win %: 36.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_RV_AV
Gain: $ -1288.5 Win %: 33.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_RV_AL
Gain: $ -1206.01 Win %: 38.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_RV_QP
Gain: $ 76.9 Win %: 54.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_HM_TR
Gain: $ 279.54 Win %: 57.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_HM_AV
Gain: $ -220.08 Win %: 53.00 in 75 days with algo TB4_HS_QM_OB5_OS5_CB5_CS5_HM_QP
