ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4
ATHE Gain: $ 0.31 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_RV
ATHE Gain: $ 0.28 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_IR3
ATHE Gain: $ 0.11 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_TR
ATHE Gain: $ -0.21 Win %: 0 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_AV
ATHE Gain: $ 0 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_VI
ATHE Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_AL
ATHE Gain: $ 0.25 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_LI
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_QP
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_HM
ATHE Gain: $ 0.19 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_SS
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_QL
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_DB10
ATHE Gain: $ -0.47 Win %: 0 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_TR_IR3
ATHE Gain: $ -1.31 Win %: 0 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_TR_QP
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_QP_IR3
ATHE Gain: $ 0.13 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_RV_TR
ATHE Gain: $ 0.13 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_RV_TR_DB3
ATHE Gain: $ -0.12 Win %: 0 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_RV_AV
ATHE Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_RV_AL
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_RV_QP
ATHE Gain: $ 0.11 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_HM_TR
ATHE Gain: $ -0.21 Win %: 0 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_HM_AV
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB4_CS4_HM_QP
ATHE Gain: $ 0.31 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_RV
ATHE Gain: $ 0.28 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_IR3
ATHE Gain: $ 0.11 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_TR
ATHE Gain: $ -0.21 Win %: 0 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_AV
ATHE Gain: $ 0 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_VI
ATHE Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_AL
ATHE Gain: $ 0.25 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_LI
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_QP
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_HM
ATHE Gain: $ 0.19 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_SS
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_QL
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_DB10
ATHE Gain: $ -0.44 Win %: 0 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_TR_IR3
ATHE Gain: $ -1.28 Win %: 0 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_TR_QP
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_QP_IR3
ATHE Gain: $ 0.13 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_RV_TR
ATHE Gain: $ 0.13 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_RV_TR_DB3
ATHE Gain: $ -0.12 Win %: 0 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_RV_AV
ATHE Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_RV_AL
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_RV_QP
ATHE Gain: $ 0.11 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_HM_TR
ATHE Gain: $ -1.04 Win %: 0 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_HM_AV
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB4_OS4_CB3_CS3_HM_QP
ATHE Gain: $ 0.31 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_RV
ATHE Gain: $ 0.28 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_IR3
ATHE Gain: $ 0.11 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_TR
ATHE Gain: $ -0.21 Win %: 0 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_AV
ATHE Gain: $ 0 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_VI
ATHE Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_AL
ATHE Gain: $ 0.25 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_LI
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_QP
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_HM
ATHE Gain: $ 0.19 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_SS
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_QL
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_DB10
ATHE Gain: $ -0.47 Win %: 0 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_TR_IR3
ATHE Gain: $ -1.47 Win %: 0 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_TR_QP
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_QP_IR3
ATHE Gain: $ 0.13 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_RV_TR
ATHE Gain: $ 0.13 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_RV_TR_DB3
ATHE Gain: $ -0.12 Win %: 0 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_RV_AV
ATHE Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_RV_AL
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_RV_QP
ATHE Gain: $ 0.11 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_HM_TR
ATHE Gain: $ -0.21 Win %: 0 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_HM_AV
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB3_OS3_CB4_CS4_HM_QP
ATHE Gain: $ 0.31 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_RV
ATHE Gain: $ 0.28 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_IR3
ATHE Gain: $ 0.11 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_TR
ATHE Gain: $ -0.21 Win %: 0 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_AV
ATHE Gain: $ 0 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_VI
ATHE Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_AL
ATHE Gain: $ 0.25 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_LI
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_QP
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_HM
ATHE Gain: $ 0.19 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_SS
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_QL
ATHE Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_DB10
ATHE Gain: $ -0.47 Win %: 0 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_TR_IR3
ATHE Gain: $ -1.51 Win %: 0 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_TR_QP
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_QP_IR3
ATHE Gain: $ 0.13 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_RV_TR
ATHE Gain: $ 0.13 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_RV_TR_DB3
ATHE Gain: $ -0.12 Win %: 0 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_RV_AV
ATHE Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_RV_AL
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_RV_QP
ATHE Gain: $ 0.11 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_HM_TR
ATHE Gain: $ -0.21 Win %: 0 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_HM_AV
ATHE Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB4_CS4_HM_QP
