Gain: $ 0.02 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1
Gain: $ 2.57 Win %: 100.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV
Gain: $ -13.77 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_IR5
Gain: $ 4.73 Win %: 100.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_TR
Gain: $ 1.82 Win %: 100.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_AV
Gain: $ -1.43 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_VI
Gain: $ 1.59 Win %: 100.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_AL
Gain: $ 4.2 Win %: 100.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_LI
Gain: $ -25.7 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_QP
Gain: $ -26.65 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_HM
Gain: $ 2.55 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_SS
Gain: $ -1.28 Win %: 0 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_QL
Gain: $ -1.09 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_DB6
Gain: $ 0.83 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_TR_IR5
Gain: $ -7.03 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_TR_QP
Gain: $ -21.47 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_QP_IR5
Gain: $ -4.79 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV_TR
Gain: $ 1.28 Win %: 100.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV_TR_DB
Gain: $ 1.5 Win %: 100.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV_AV
Gain: $ 3.18 Win %: 100.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV_AL
Gain: $ 18.38 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV_QP
Gain: $ 0.88 Win %: 50.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_HM_TR
Gain: $ 2.24 Win %: 100.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_HM_AV
Gain: $ 20.23 Win %: 100.00 in 2 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_HM_QP
Gain: $ 6.42 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_RV
Gain: $ 2.29 Win %: 100.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_IR5
Gain: $ 1.64 Win %: 100.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_TR
Gain: $ 2.1 Win %: 100.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_AV
Gain: $ -1.45 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_VI
Gain: $ -0.57 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_AL
Gain: $ -1.81 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_LI
Gain: $ -0.68 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_QP
Gain: $ 9.2 Win %: 100.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_HM
Gain: $ -0.57 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_SS
Gain: $ 2.1 Win %: 100.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_QL
Gain: $ -0.57 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_DB6
Gain: $ 2.1 Win %: 100.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_TR_IR5
Gain: $ -0.68 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_TR_QP
Gain: $ -1.04 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_QP_IR5
Gain: $ 6.05 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_RV_TR
Gain: $ 0.86 Win %: 100.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_RV_TR_DB
Gain: $ 8.84 Win %: 100.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_RV_AV
Gain: $ 8.01 Win %: 100.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_RV_AL
Gain: $ 0.41 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_RV_QP
Gain: $ 6.59 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_HM_TR
Gain: $ 6.76 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_HM_AV
Gain: $ -0.61 Win %: 50.00 in 2 days with algo TB5_HL_HI_QM_OB5_OS5_CB1_CS1_HM_QP
Gain: $ 3.65 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_RV
Gain: $ 0.94 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_IR5
Gain: $ 1.67 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_TR
Gain: $ -17.83 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_AV
Gain: $ -2.14 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_VI
Gain: $ 2.71 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_AL
Gain: $ 1.71 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_LI
Gain: $ 15.02 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_QP
Gain: $ 3.45 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_HM
Gain: $ 2.95 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_SS
Gain: $ -2.79 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_QL
Gain: $ 3.45 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_DB10
Gain: $ 0.94 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_TR_IR5
Gain: $ 1.94 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_TR_QP
Gain: $ -9.16 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_QP_IR5
Gain: $ 1.58 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_RV_TR
Gain: $ 0 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_RV_TR_DB
Gain: $ -11.49 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_RV_AV
Gain: $ 2.91 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_RV_AL
Gain: $ 14.97 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_RV_QP
Gain: $ 4.19 Win %: 100.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_HM_TR
Gain: $ -15.53 Win %: 0 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_HM_AV
Gain: $ 15.02 Win %: 50.00 in 2 days with algo TB3_HL_LO_QM_OB1_OS1_CB2_CS2_HM_QP
Gain: $ 5.71 Win %: 100.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_RV
Gain: $ 0.94 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_IR5
Gain: $ 3.1 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_TR
Gain: $ -18.44 Win %: 0 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_AV
Gain: $ -2.74 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_VI
Gain: $ 0.68 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_AL
Gain: $ 2.65 Win %: 100.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_LI
Gain: $ -3.73 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_QP
Gain: $ 3.24 Win %: 100.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_HM
Gain: $ 3.1 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_SS
Gain: $ -5.22 Win %: 0 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_QL
Gain: $ 4.52 Win %: 100.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_DB10
Gain: $ 0.94 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_TR_IR5
Gain: $ -3.73 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_TR_QP
Gain: $ -9.16 Win %: 0 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_QP_IR5
Gain: $ 4.52 Win %: 100.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_RV_TR
Gain: $ 0 Win %: 100.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_RV_TR_DB
Gain: $ 0.22 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_RV_AV
Gain: $ 1.7 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_RV_AL
Gain: $ -3.09 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_RV_QP
Gain: $ 0.36 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_HM_TR
Gain: $ -17.28 Win %: 0 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_HM_AV
Gain: $ -3.73 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_HM_QP
Gain: $ -3.73 Win %: 50.00 in 2 days with algo TB3_HL_HS_QM_OB5_OS5_CB4_CS4_HM_QP
Gain: $ -1 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5
Gain: $ 3.88 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_RV
Gain: $ 0.18 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_IR5
Gain: $ 4.51 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_TR
Gain: $ 4.51 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_AV
Gain: $ 0.29 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_VI
Gain: $ -0.37 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_AL
Gain: $ -1.66 Win %: 33.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_LI
Gain: $ -5.11 Win %: 33.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_QP
Gain: $ 10.27 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_HM
Gain: $ 2.7 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_SS
Gain: $ -0.31 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_QL
Gain: $ 0.88 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_DB8
Gain: $ 4.55 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_TR_IR5
Gain: $ 1.32 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP
Gain: $ -2.78 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_QP_IR5
Gain: $ 7.06 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR
Gain: $ 0 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB
Gain: $ 7.44 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV
Gain: $ 3.1 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL
Gain: $ 1.17 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP
Gain: $ 10.27 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR
Gain: $ 10.27 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV
Gain: $ 1.54 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP
Gain: $ 6.73 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_RV
Gain: $ 0.18 Win %: 66.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_IR5
Gain: $ 5.72 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_TR
Gain: $ 1.38 Win %: 33.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_AV
Gain: $ 2.45 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_VI
Gain: $ 3.35 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_AL
Gain: $ 5.05 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_LI
Gain: $ -7.64 Win %: 33.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_QP
Gain: $ 3.27 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_HM
Gain: $ 5.53 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_SS
Gain: $ 6.18 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_QL
Gain: $ 5.97 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_DB8
Gain: $ 3.81 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_TR_IR5
Gain: $ -2.3 Win %: 66.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_TR_QP
Gain: $ -2.78 Win %: 66.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_QP_IR5
Gain: $ 5.72 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_RV_TR_DB
Gain: $ 5.16 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_RV_AV
Gain: $ 3.35 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_RV_AL
Gain: $ -7.26 Win %: 33.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_RV_QP
Gain: $ 3.02 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_HM_TR
Gain: $ 5.68 Win %: 100.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_HM_AV
Gain: $ -7.06 Win %: 33.00 in 3 days with algo TB4_HL_LO_QM_OB1_OS1_CB1_CS1_HM_QP
Gain: $ 1.89 Win %: 66.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_RV
Gain: $ 3.82 Win %: 66.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_IR5
Gain: $ 4.79 Win %: 100.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_TR
Gain: $ -16.28 Win %: 33.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_AV
Gain: $ -0.2 Win %: 33.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_VI
Gain: $ 4.07 Win %: 100.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_AL
Gain: $ 0.52 Win %: 66.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_LI
Gain: $ 16.19 Win %: 66.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_QP
Gain: $ 1.2 Win %: 66.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_HM
Gain: $ 0.99 Win %: 66.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_SS
Gain: $ -3.82 Win %: 33.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_QL
Gain: $ 1.49 Win %: 66.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_DB10
Gain: $ 5.23 Win %: 100.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_TR_IR5
Gain: $ -2.7 Win %: 66.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_TR_QP
Gain: $ -9.05 Win %: 33.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_QP_IR5
Gain: $ 4.99 Win %: 100.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_RV_TR_DB
Gain: $ -8.52 Win %: 66.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_RV_AV
Gain: $ 4.38 Win %: 100.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_RV_AL
Gain: $ 9.92 Win %: 33.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_RV_QP
Gain: $ 5.59 Win %: 100.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_HM_TR
Gain: $ -13.37 Win %: 33.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_HM_AV
Gain: $ 9.51 Win %: 33.00 in 3 days with algo TB3_HL_HI_QM_OB1_OS1_CB1_CS1_HM_QP
Gain: $ 5.29 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_RV
Gain: $ 0.18 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_IR5
Gain: $ 3.81 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_TR
Gain: $ 3.81 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_AV
Gain: $ 0.29 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_VI
Gain: $ -1.07 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_AL
Gain: $ -2.63 Win %: 33.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_LI
Gain: $ -4.6 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_QP
Gain: $ 10.46 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_HM
Gain: $ 2 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_SS
Gain: $ 0.42 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_QL
Gain: $ 0.18 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_DB8
Gain: $ 3.81 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_TR_IR5
Gain: $ 1.1 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_TR_QP
Gain: $ -2.78 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_QP_IR5
Gain: $ 5.36 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_RV_TR
Gain: $ 0 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_RV_TR_DB
Gain: $ 8.92 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_RV_AV
Gain: $ 3.7 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_RV_AL
Gain: $ 0.74 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_RV_QP
Gain: $ 6 Win %: 66.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_HM_TR
Gain: $ 9.57 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_HM_AV
Gain: $ 1.32 Win %: 100.00 in 3 days with algo TB4_HL_HI_QM_OB5_OS5_CB5_CS5_HM_QP
